# reentry

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  Makefile  README.md  RECRUITER_BRIEF.md  ROADMAP.md  pyproject.toml  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: CONNECTORS.md  DEMO_SCRIPT.md  EVALUATION.md  EVAL_RESULTS.md  RECRUITER_BRIEF.md  THREAT_MODEL.md
evals/: run_eval.py
hooks/: reentry.bash  reentry.zsh
mcp/: server.py
mcp/tests/: test_mcp_server.py
scripts/: screenshots.py
server/: app.py
server/tests/: test_api.py
src/reentry/: __init__.py  actions.py  capsule.py  cli.py  contradictions.py  db.py  demo.py  entropy.py  gitsource.py  ledger.py  llm.py  redact.py  report.py  state.py
src/reentry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/reentry/connectors/: calendar_ics.py  fs_watcher.py  github.py  terminal.py
tests/: test_calendar_connector.py  test_connectors.py  test_github_connector.py  test_reentry.py
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  reentry-0.1.0.vsix  tsconfig.json
vscode-extension/src/: CapsuleProvider.ts  StatusBarItem.ts  extension.ts
web/: next.config.mjs  package-lock.json  package.json
web/scripts/: generate-snapshot.js  generate-snapshot.py
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/capsule/: route.ts
web/src/app/api/entropy/: route.ts
web/src/app/api/sync/: route.ts
web/src/app/app/: layout.tsx  page.tsx
web/src/components/: ActionPanel.tsx  CapsuleSection.tsx  CapsuleView.tsx  EntropyGauge.tsx  EvidenceChip.tsx  LandingPage.tsx
web/src/components/landing/: MarketingPage.tsx
web/src/components/ui/: CopyButton.tsx  CountUp.tsx  ScrollReveal.tsx
web/src/data/: snapshot.json
web/src/lib/: api.ts  demo-data.ts  types.ts
(+3 files in other folders)
