[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reentry"
version = "0.1.0"
description = "Return to momentum: an event-driven temporal operating system for interrupted knowledge work."
requires-python = ">=3.10"
dependencies = ["click>=8.1", "rich>=13"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
reentry = "reentry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
